Add /construction and /installation

--- a/views/procurement.hbs
+++ b/views/procurement.hbs
@@ -44,11 +44,16 @@
                     <hr>
                     
                     <p><a href="/engineering">Engineering -EPCI</a></p>
-    
+                
+                <hr>
+                    <p><a href="/installation">Installation</a></p>
+                
+                <hr>
+                    <p><a href="/construction">Construction</a></p>
                 
                 <hr>
                 
-                <img src="/assets/images/engineer-310x437.jpg" alt="engineering" width="250" height="450" style="width: 100%;">
+                <img src="/assets/images/procurement.jpg" alt="procurement" width="250" height="450" style="width: 100%;" class="img-thumbnail">
             </div>
         
             <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7"><br>
@@ -106,7 +111,6 @@ Our Turnkey Procurement services also include Commercial Contracts Management, w
         </div>
     </div>
 </section>
-
 
 
 {{> footer}}
