--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -97,9 +97,9 @@
     </div>
 </section>
 
-<section class="mbr-section info2 cid-qUjgBzOnDD" id="info2-1i">
+<section class="mbr-section info2 cid-qUiUGUBgcp" id="info2-3">
 
-    
+
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(37, 170, 178);">
     </div>
@@ -107,12 +107,19 @@
     <div class="container">
         <div class="row main justify-content-center">
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary-outline display-4" href="/contact"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a></div>
+                <div class="mbr-section-btn align-left py-4">
+                    <a class="btn btn-primary-outline display-4" href="/contact">
+                        <span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
+                </div>
             </div>
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-5">Over 3 years collective expertise supplying the Oil &amp; Gas industry and mining industry across Africa.</h2>
+                <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-5">Over 3 years,
+                    <div>we have provided quality and excellent services to oil and gas, food and beverages and Power sectors.</div>
+                </h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white mbr-fonts-style display-7">
-                    Barbadox Ltd.&nbsp;</h3>
+                    <strong>
+                        Barbadox Ltd.&nbsp;</strong>
+                </h3>
             </div>
         </div>
     </div>
