--- a/views/consulting.hbs
+++ b/views/consulting.hbs
@@ -1,11 +1,10 @@
 {{> navbar}}
 
-<section class="engine"><a href="/">how to develop your own website</a></section><section class="mbr-section content5 cid-qVqTUn7rdF" id="content5-3v">
+<section class="engine"><a href="/">Barbadox Ltd.</a></section>
 
+
+<section class="mbr-section content5 cid-qVqTUn7rdF" id="content5-3v">
     
-
-    
-
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
@@ -60,11 +59,16 @@
                     <hr>
                     
                     <p><a href="/engineering">Engineering -EPCI</a></p>
-    
+                
+                <hr>
+                    <p><a href="/installation">Installation</a></p>
+                
+                <hr>
+                    <p><a href="/construction">Construction</a></p>
                 
                 <hr>
                 
-                <img src="/assets/images/engineer-310x437.jpg" alt="engineering" width="250" height="450" style="width: 100%;">
+                <img src="/assets/images/mbr-1162x775.jpg" alt="consulting" width="250" height="450" style="width: 100%;" class="img-thumbnail">
             </div>
         
             <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
