--- a/views/engineering.hbs
+++ b/views/engineering.hbs
@@ -6,6 +6,7 @@
 
     
 
+    
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
@@ -35,15 +36,20 @@
                     
                     <p><a href="/engineering">Engineering -EPCI</a></p>
     
-                
+                <hr>
+                <p><a href="/installation">Installation</a></p>
+    
+                <hr>
+                <p><a href="/construction">Construction</a></p>
+    
                 <hr>
                 
-                <img src="/assets/images/engineer-310x437.jpg" alt="engineering" width="250" height="450" style="width: 100%;">
+                <img src="/assets/images/gas2-699x466.jpg" alt="engineering" width="250" height="450" style="width: 100%;" class="img-thumbnail">
             </div>
         
             <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7"><p>
                 </p><ul>
-                    <h5>Subsea &amp; Geotechnical Projects</h5><h5><br></h5>
+                    <h5>Subsea &amp; Geotechnical Projects</h5>
                     <li>Subsea production systems.</li>
                     <li>SubseaUmbilical Riser and Flow line (SURF/URL/UFL).</li>
                     <li>Subsea Manifolds Jumpers.</li><li>Foundation Flow Assurance Studies</li>
@@ -66,11 +72,7 @@ We can work either as an integral part of the client’s project team providing 
                 </p><ul>
                     <h5>Onshore/Offshore Projects (Topside Facilities)</h5><h5><strong>The services we offer include</strong><br></h5>
                     <li>Conceptual/Feasibility Studies</li><li>FEED and Detailed Engineering</li><li>Offshore Structure Installation Desgin</li><li>FPSO Platform Assessment</li><li>Process Facilities &amp; Skid Design</li><li>Technical Documentation for Oil &amp; Gas facilities, pipeline Refineries, Plants and Petrochemical Industries.</li></ul><p><br></p><h5><strong>Process Packages</strong><br></h5> <li>Engineering &amp; Technical Services</li><li>Electrical Instrumentation, telecom &amp; Control services</li><li>Transportation &amp; Storage</li>
-                <p><br></p><h5><strong>Construction &amp; Installation</strong></h5>
-                 
-                 <p>Other services we render include:</p>
-                 <ul>
-                     <li>Operations &amp; Maintenance</li><li>Mechanical Maintenance services</li><li>Pressure (coded) weilding</li><li>General fabrication &amp; structural maintenance</li><li>On-site installations and process valve refurbishment</li>
+                <p><br></p><h5><strong>Overview</strong></h5><p>Our engineering teams have successfully delivered highly complex engineering projects in remote and challenging locations across Nigeria. Barbadox Limited capabilities cover comprehensive services, including feasibility studies, FEEDs, DED and EPC projects for Greenfield facilities and revamps. Our services have been engaged across a variety of onshore, offshore (shallow &amp; deep water) and subsea projects.</p><p>Our team of engineers have an average of 6 years field experience providing independent, comprehensive engineering solutions beginning at the early concept phase and extending through final commissioning in the following disciplines and specialty areas: process; technical safety; instrumentation and controls, electrical; civil/structural; mechanical and piping.</p><p><strong>Conceptual Engineering</strong></p><p>Our team focuses on functional requirements, systematic engineering and decision quality process during feasibility study by studying all project stakeholder perspectives and reviewing economic return.</p><p><strong>Front End Engineering Design (FEED)</strong></p><p>Our FEED solutions provide certainty of delivery and a high level of reliability. Our cost estimates are based on legacy and market data from our construction and installation experience as well as from procurement and vendor network. Our designs reflect proven construction and installation practices to ensure reliable, efficient, quality project delivery, lower costs, and faster FEEDs.</p><p><strong>Detail Design</strong></p><p>Our approach is carrying out modeling and analysis required for any installation methodology which have provided us some level of experience &amp; knowledge of constructability and best practices across multiple-disciplined design teams.&nbsp;</p><ul>
                  </ul>
             </div>
             
@@ -86,7 +88,5 @@ We can work either as an integral part of the client’s project team providing 
         </div>   
                     
     </div>
-    
-</section>
 
 {{> footer}}
