--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,5 @@
-<section class="menu cid-qUiLs8t9CL" once="menu" id="menu2-0">
+
+  <section class="menu cid-qUiLs8t9CL" once="menu" id="menu2-0">
 
     
 
@@ -27,11 +28,11 @@
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="/about" aria-expanded="false">About</a>
     
                 
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="/procurement" data-toggle="dropdown-submenu" aria-expanded="false">Services</a>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="/procurement" data-toggle="dropdown-submenu" aria-expanded="true">Services</a>
                     
                 
-                <div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="/procurement" aria-expanded="false">Procurement<br></a><a class="dropdown-item text-black display-4" href="/engineering" aria-expanded="false">Engineering-EPCI</a><a class="dropdown-item text-black display-4" href="/consulting" aria-expanded="false">Strategic Consulting</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="/industries" data-toggle="dropdown-submenu" aria-expanded="true">Industries<br></a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="/industries#content11-3y">Oil &amp; Gas</a><a class="text-black dropdown-item display-4" href="/industries#content11-3z" aria-expanded="false">Food &amp; Beverages</a><a class="text-black dropdown-item display-4" href="/industries#content11-40" aria-expanded="false">Power Utility Infrastructure</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="/careers">Careers</a></li>
+                <div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="/procurement" aria-expanded="false">Procurement<br></a><a class="dropdown-item text-black display-4" href="/engineering" aria-expanded="false">Engineering-EPCI</a><a class="dropdown-item text-black display-4" href="/consulting" aria-expanded="false">Strategic Consulting</a><a class="text-black dropdown-item display-4" href="/installation" aria-expanded="false">Installation</a><a class="text-black dropdown-item display-4" href="/construction" aria-expanded="false">Construction</a></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="/industries" data-toggle="dropdown-submenu" aria-expanded="false">Industries<br></a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="/industries#content11-3y">Oil &amp; Gas</a><a class="text-black dropdown-item display-4" href="/industries#content11-3z" aria-expanded="false">Food &amp; Beverages</a><a class="text-black dropdown-item display-4" href="/industries#content11-40" aria-expanded="false">Power Utility Infrastructure</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="/careers">Careers</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="/contact" aria-expanded="false">
                         Contact Us<br>
