--- a/views/construction.hbs
+++ b/views/construction.hbs
@@ -29,7 +29,7 @@
                     <p><a href="/consulting">Strategic Consulting</a></p>
                     <hr>
                     
-                    <p><a href="/engineering">Engineering -EPCI</a></p>      
+                    <p><a href="/engineering">Engineering</a></p>      
                 <hr>
                 <p><a href="/installation">Installation</a></p>
                 <hr>
