--- a/views/engineering.hbs
+++ b/views/engineering.hbs
@@ -11,7 +11,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">Engineering EPCI</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">Barbadox offers a comprehensive range of engineers to meet our clients needs at every stage of the design process.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">Barbadox offers a comprehensive range of engineering solutions to meet our clients needs at every stage of the design process.</h3>
                 
                 <hr>
             </div>
@@ -34,7 +34,7 @@
                     <p><a href="/consulting">Strategic Consulting</a></p>
                     <hr>
                     
-                    <p><a href="/engineering">Engineering -EPCI</a></p>
+                    <p><a href="/engineering">Engineering</a></p>
     
                 <hr>
                 <p><a href="/installation">Installation</a></p>
