--- a/views/installation.hbs
+++ b/views/installation.hbs
@@ -30,7 +30,7 @@
                     <p><a href="/consulting">Strategic Consulting</a></p>
                     <hr>
                     
-                    <p><a href="/engineering">Engineering -EPCI</a></p>
+                    <p><a href="/engineering">Engineering</a></p>
                    
                 <hr>
                 
