--- a/views/engineering.hbs
+++ b/views/engineering.hbs
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">Engineering EPCI</h2>
+                <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">{{ title }}</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">Barbadox offers a comprehensive range of engineering solutions to meet our clients needs at every stage of the design process.</h3>
                 
                 <hr>
