--- a/views/installation.hbs
+++ b/views/installation.hbs
@@ -7,7 +7,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">Installation</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">We offer quality &amp; competence in our installation services&nbsp;</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">We ensure Quality control, Health and safety precautions in all our installations.&nbsp;</h3>
                 
                 <hr>
             </div>
