--- a/views/engineering.hbs
+++ b/views/engineering.hbs
@@ -47,13 +47,13 @@
                 <img src="/assets/images/gas2-699x466.jpg" alt="engineering" width="250" height="450" style="width: 100%;" class="img-thumbnail">
             </div>
         
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7"><p>
-                </p><ul>
+            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">{{!-- <p>
+                </p> --}}{{!-- <ul>
                     <h5>Subsea &amp; Geotechnical Projects</h5>
                     <li>Subsea production systems.</li>
                     <li>SubseaUmbilical Riser and Flow line (SURF/URL/UFL).</li>
                     <li>Subsea Manifolds Jumpers.</li><li>Foundation Flow Assurance Studies</li>
-                </ul>
+                </ul> --}}
                 <h5><br></h5><h5>Project Management &amp; Construction Supervision</h5>
                 
                 <p>We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work.
