Edit /industries page

--- a/views/industries.hbs
+++ b/views/industries.hbs
@@ -23,7 +23,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 
-                <h3>1. <a href="/industries">Oil &amp; Gas</a></h3>
+                <h3>1. <a href="/industries" style="color: rgba(26, 24, 24, 0.63)">Oil &amp; Gas</a></h3>
                 <p>Barbadox Limited range of consultancy for EPC services include:</p>
                 
                 <ul>
@@ -55,7 +55,7 @@ Now with the support of technical partner, Barbadox Limited provide combined sol
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 
-                <h3>2. <a href="/industries">Food And Beverages</a></h3>
+                <h3>2. <a href="/industries" style="color: rgba(26, 24, 24, 0.63)">Food And Beverages</a></h3>
                 <p>Hygienic standards and safety&nbsp;</p>
                 <p>
                     Barbadox is the sole representative of WIKA Group and products in Nigeria. Measuring instruments from WIKA are manufactured in conformity with international standards. They meet the stringent requirements of, e.g.:
@@ -93,7 +93,7 @@ Now with the support of technical partner, Barbadox Limited provide combined sol
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 
-                <h3>3. <a href="/industries">Power Utility Infrastructure</a></h3>
+                <h3>3. <a href="/industries" style="color: rgba(26, 24, 24, 0.63)">Power Utility Infrastructure</a></h3>
                 <p>Barbadox also provide services and expertise to Nigeria Power sector, the broad capabilities enable us to offer our customers a full range of services from design, engineering, procurement and construction to operational and maintenance. We engage in the following services;</p>
                 
                 <ul>
