Create /oil-gas, /power and /food-beverages routes

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 {{> navbar }}
 
 
-<section class="engine"><a href="/">bootstrap templates</a></section><section class="features14 cid-qUjflfrooa" id="features14-d">
+<section class="features14 cid-qUjflfrooa" id="features14-d">
 
     
     <div class="container align-center">
@@ -77,7 +77,7 @@
             </div>
             <div class="media-container-row image-row">
                 <div class="mbr-figure" style="width: 33%;">
-                    <img src="/assets/images/mbr-732x533.jpg" alt="Mobirise" title="">
+                    <img src="/assets/images/mbr-732x533.jpg" alt="Installment" title="">
                 </div>
             </div>
         </div>
