--- a/views/consulting.hbs
+++ b/views/consulting.hbs
@@ -2,9 +2,8 @@
 
 <section class="engine"><a href="/">Barbadox Ltd.</a></section>
 
-
 <section class="mbr-section content5 cid-qVqTUn7rdF" id="content5-3v">
-    
+
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
@@ -17,15 +16,26 @@
     </div>
 </section>
 
-<section class="mbr-section article content1 cid-qUL28uLIpc" id="content1-2s">
-    
-     
+<section class="features11 cid-qXXwDLh10i" id="features11-5f">
 
-    <div class="container">
-        <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-12 mbr-fonts-style display-7"><p>We are on hand to create, plan and implement short, mid and long term development requirements, by complementing and driving the necessary indices of growth in any organization. We collaborate with Government and its various agencies, NGOs, SMEs, Corporate and Social Groups to achieve and sustain their operational strategies under a conducive and friendly approach by adapting to effective and customized techniques, peculiar to the firm. Our range of services include Public Relations training, Man-power resource management training, Man-power Contract Administration, Human resource development, etc.</p><p>We provide a one-stop shop for all your outsourced energy services from technical training to manpower recruitment (local and expatriate) and feasibility assessment studies.</p></div>
-        </div>
-    </div>
+    <div class="container">   
+        <div class="col-md-12">
+            <div class="media-container-row">
+                <div class="mbr-figure" style="width: 50%;">
+                    <img src="/assets/images/mbr-1162x775.jpg" alt="consulting" title="">
+                </div>
+                <div class=" align-left aside-content">
+                    <div class="mbr-section-text">
+                <p class="mbr-dark display-6">
+                    We are on hand to create, plan and implement short, mid and long term development requirements, by complementing and driving the necessary indices of growth in any organization. We collaborate with Government and its various agencies, NGOs, SMEs, Corporate and Social Groups to achieve and sustain their operational strategies under a conducive and friendly approach by adapting to effective and customized techniques, peculiar to the firm. Our range of services include Public Relations training, Man-power resource management training, Man-power Contract Administration, Human resource development, etc.
+We provide a one-stop shop for all your outsourced energy services from technical training to manpower recruitment (local and expatriate) and feasibility assessment studies.
+                </p>
+            </div>
+
+            </div>
+            </div>
+        </div> 
+    </div>          
 </section>
 
 <section class="mbr-section article content1 cid-qVqXojTs1Y" id="content1-3x">
@@ -42,67 +52,47 @@
     </div>
     </div>
 </section>
-
-<section class="mbr-section article content12 cid-qVqUmqrN0w" id="content12-3w">
-     
-
+<section class="features4 cid-qXXynMlK4u" id="features4-5g">
+    
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
-                
-                <h3>Our Services</h3>
-                <hr>
-                    <p><a href="/procurement">Procurement</a></p>
-                    <hr>
-                    
-                    <p><a href="/consulting">Strategic Consulting</a></p>
-                    <hr>
-                    
-                    <p><a href="/engineering">Engineering</a></p>
-                
-                <hr>
-                    <p><a href="/installation">Installation</a></p>
-                
-                <hr>
-                    <p><a href="/construction">Construction</a></p>
-                
-                <hr>
-                
-                <img src="/assets/images/mbr-1162x775.jpg" alt="consulting" width="250" height="450" style="width: 100%;" class="img-thumbnail">
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">
+                            Manpower Contract Administration
+                        </h4>
+                        <ul class="mbr-text mbr-fonts-style display-7">
+                            <li>Work Permits: STR, TWP</li>
+                            <li>Resident Permits</li>
+                            <li>Personnel Support Services</li>
+                            <li>Salaries Administration</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
-                    <h5>Manpower Contract Administration</h5>
-                <ul>
-                    <li>Work Permits: STR, TWP
-</li><li>Resident Permits
-</li><li>Personnel Support Services</li><li>Salaries Administration</li>
-                </ul>
-            </div>
-            
-             <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
-                    <h5>Training Packages</h5>
-                 <ul>
-                     <li>General Technical Courses.</li><li>HSE related training</li><li>Tailored Oil &amp; Gas related courses IT/Telecoms
-</li>
-                     
-                 </ul>
-                 <h5><br></h5>
-            </div>
-            
-            <!--<div class="mbr-text counter-container col-12 col-md-3 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".mbr-text" data-multiline mbr-article>
-                <h5>Project Management &amp; Construction Supervision</h5>
-                
-                <p>We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work.
 
-We can work either as an integral part of the client’s project team providing specialist package services, or we can offer a complete construction management service covering all aspects of the project management</p>
-                
-                
-            </div> -->
-        </div>   
-                    
+            <div class="card p-3 col-12 col-md-6 col-12 col-md-6">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Training Packages</h4>
+                        <ul class="mbr-text mbr-fonts-style display-7">
+                            <li>General Technical Courses.</li>
+                            <li>HSE related training</li>
+                            <li>Tailored Oil &amp; Gas related courses IT/Telecoms</li>
+                    </ul>
+                </div>
+            </div>
+
+            
+
+            
+        </div>
     </div>
-    
+</div>
 </section>
+
+
+
 
 {{> footer}}
