--- a/views/installation.hbs
+++ b/views/installation.hbs
@@ -1,13 +1,12 @@
 {{> navbar}}
-
+ 
 <section class="mbr-section content5 cid-qVY6jQqDCz" id="content5-48">
-
-        
+    
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">Installation</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">We ensure Quality control, Health and safety precautions in all our installations.&nbsp;</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">We offer quality &amp; competence in our installation services&nbsp;</h3>
                 
                 <hr>
             </div>
@@ -15,70 +14,34 @@
     </div>
 </section>
 
-<section class="mbr-section article content12 cid-qVY6jVd5A6" id="content12-4b">
-     
-
-    <div class="container">
-        <div class="media-container-row">
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
-                
-                <h3>Our Services</h3>
-                <hr>
-                    <p><a href="/procurement">Procurement</a></p>
-                    <hr>
-                    
-                    <p><a href="/consulting">Strategic Consulting</a></p>
-                    <hr>
-                    
-                    <p><a href="/engineering">Engineering</a></p>
-                   
-                <hr>
-                
-                    <p><a href="/installation">Installation</a></p>
-                
-                <hr>
-                    <p><a href="/construction">Construction</a></p>
-                
-                <hr>
-                
-                <img src="/assets/images/installment.jpeg" alt="installment" width="250" height="450" style="width: 100%;" class="img-thumbnail">
-            </div>
-        
-            <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
-                <h3>Installation</h3>
-                <p>We have competence to handle installation of the following;</p>
-                <ul>
-                <li>Pipeline &amp; platform installation</li>
-                <li>Buoy installation</li>
-                <li>Onshore, offshore, shallow water and marsh pipelines</li>
-                <li>Hook-up &amp; maintenance</li>
-                <li>Marine terminals</li>
-                <li>Shore approaches</li>
-                <li>Installation of offshore structures</li>
-                </ul>
-                
-            </div>
-            
-            <!-- <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".mbr-text" data-multiline mbr-article><p>
-                </p>
-                 <h5><br></h5><ul>
-                 </ul>
-                 
-            </div>-->
-            
-            <!--<div class="mbr-text counter-container col-12 col-md-3 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".mbr-text" data-multiline mbr-article>
-                <h5>Project Management &amp; Construction Supervision</h5>
-                
-                <p>We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work.
-
-We can work either as an integral part of the client’s project team providing specialist package services, or we can offer a complete construction management service covering all aspects of the project management</p>
-                
-                
-            </div> -->
-        </div>   
-                    
-    </div>
+<section class="features11 cid-qXYs1oiop6" id="features11-5j">
     
+
+    <div class="container">   
+        <div class="col-md-12">
+            <div class="media-container-row">
+                <div class="mbr-figure" style="width: 50%;">
+                     <img src="/assets/images/installment.jpeg" alt="installment" title="">
+                </div>
+                <div class=" align-left aside-content">
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">We have competence to handle installation of the following;</h2>
+                    <div class="mbr-section-text">
+                <ul class="mbr-light">
+                    <li>Pipeline &amp; platform installation</li>
+                    <li>Buoy installation</li>
+                    <li>Onshore, offshore, shallow water and marsh pipelines</li>
+                    <li>Hook-up &amp; maintenance</li>
+                    <li>Marine terminals</li>
+                    <li>Shore approaches</li>
+                    <li>Installation of offshore structures</li>
+                </ul>
+            </div>
+
+            </div>
+            </div>
+        </div> 
+    </div>          
 </section>
+
 
 {{> footer}}
