--- a/views/construction.hbs
+++ b/views/construction.hbs
@@ -1,7 +1,7 @@
 {{> navbar}}
 
 <section class="mbr-section content5 cid-qVY6rwJT59" id="content5-4e">
-    
+
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
@@ -14,38 +14,18 @@
     </div>
 </section>
 
-<section class="mbr-section article content12 cid-qVY6rC7Wfd" id="content12-4h">
-     
+<section class="features11 cid-qXXdupMKD1" id="features11-5a">
 
-    <div class="container">
-        <div class="media-container-row">
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
-                
-                <h3>Our Services</h3>
-                <hr>
-                    <p><a href="/procurement">Procurement</a></p>
-                    <hr>
-                    
-                    <p><a href="/consulting">Strategic Consulting</a></p>
-                    <hr>
-                    
-                    <p><a href="/engineering">Engineering</a></p>      
-                <hr>
-                <p><a href="/installation">Installation</a></p>
-                <hr>
-                <p><a href="/construction">Construction</a></p>
-          
-                <hr>
-                
-                <img src="/assets/images/construction-site.png" alt="construction" width="250" height="450" style="width: 100%;" class="img-thumbnail">
-            </div>
-        
-            <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
-                <p><br>
-                </p>
-                <h3>Construction</h3>
-                <p>Our services span across the following;</p>
-                <ul>
+    <div class="container">   
+        <div class="col-md-12">
+            <div class="media-container-row">
+                <div class="mbr-figure" style="width: 50%;">
+                    <img src="/assets/images/construction-site-952x536.png" alt="Constructtion Site" title="">
+                </div>
+                <div class=" align-left aside-content">
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">Our services span across the following;</h2>
+                    <div class="mbr-section-text">
+                <ul class="mbr-light">
                     <li>Onshore, offshore, shallow water and marsh pipelines</li>
                     <li>Gas processing facilities</li>
                     <li>Flow stations</li>
@@ -53,33 +33,14 @@
                     <li>Gas compressor stations</li>
                     <li>Gathering systems</li>
                     <li>On-site installations and process valve refurbishment</li>
-                    <li>Pressure coded welding, general fabrication and structural maintenance</li>
-                    
+                    <li>Pressure coded welding, general fabrication and structural maintenance</li> 
                 </ul>
-                
-                
             </div>
-            
-             <!--<div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".mbr-text" data-multiline mbr-article><p>
-                </p>
-                 <h5><br></h5><ul>
-                 </ul>
-                 
-            </div>-->
-            
-            <!--<div class="mbr-text counter-container col-12 col-md-3 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".mbr-text" data-multiline mbr-article>
-                <h5>Project Management &amp; Construction Supervision</h5>
-                
-                <p>We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work.
 
-We can work either as an integral part of the client’s project team providing specialist package services, or we can offer a complete construction management service covering all aspects of the project management</p>
-                
-                
-            </div> -->
-        </div>   
-                    
-    </div>
-    
+            </div>
+            </div>
+        </div> 
+    </div>          
 </section>
 
 
