--- a/views/engineering.hbs
+++ b/views/engineering.hbs
@@ -1,16 +1,13 @@
 {{> navbar}}
 
-<section class="engine"><a href="/">Barbadox Ltd.</a></section><section class="mbr-section content5 cid-qVptU53xTf" id="content5-3r">
+<section class="engine"><a href="/">Barbadox Ltd.</a></section>
 
-    
-
-    
-
+<section class="mbr-section content5 cid-qVptU53xTf" id="content5-3r">
     
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">{{ title }}</h2>
+                <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">Engineering</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">Barbadox offers a comprehensive range of engineering solutions to meet our clients needs at every stage of the design process.</h3>
                 
                 <hr>
@@ -19,74 +16,193 @@
     </div>
 </section>
 
-<section class="mbr-section article content12 cid-qVphIQUB8E" id="content12-3q">
-     
+<section class="features11 cid-qXXkCqdEZz" id="features11-5b">
 
+    
+
+    
+
+    <div class="container">   
+        <div class="col-md-12">
+            <div class="media-container-row">
+                <div class="mbr-figure" style="width: 50%;">
+                    <img src="/assets/images/gas2-699x466.jpg" alt="engineering" title="">
+                </div>
+                <div class=" align-left aside-content">
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">Overview</h2>
+                    <div class="mbr-section-text">
+                        <p class="display-7">
+                            Our engineering teams have successfully delivered highly complex engineering projects in remote and challenging locations across Nigeria. Barbadox Limited capabilities cover comprehensive services, including feasibility studies, FEEDs, DED and EPC projects for Greenfield facilities and revamps. Our services have been engaged across a variety of onshore, offshore (shallow &amp; deep water) and subsea projects.
+Our team of engineers have an average of 6 years field experience providing independent, comprehensive engineering solutions beginning at the early concept phase and extending through final commissioning in the following disciplines and specialty areas: process; technical safety; instrumentation and controls, electrical; civil/structural; mechanical and piping.</p>
+            
+                    </div>
+
+            </div>
+            </div>
+        </div> 
+    </div>          
+</section>
+
+<section class="features4 cid-qXXlUsbAND" id="features4-5c">
+    
+         
+
+    
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">
-                
-                <h3>Our Services</h3>
-                <hr>
-                    <p><a href="/procurement">Procurement</a></p>
-                    <hr>
-                    
-                    <p><a href="/consulting">Strategic Consulting</a></p>
-                    <hr>
-                    
-                    <p><a href="/engineering">Engineering</a></p>
-    
-                <hr>
-                <p><a href="/installation">Installation</a></p>
-    
-                <hr>
-                <p><a href="/construction">Construction</a></p>
-    
-                <hr>
-                
-                <img src="/assets/images/gas2-699x466.jpg" alt="engineering" width="250" height="450" style="width: 100%;" class="img-thumbnail">
-            </div>
-        
-            <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7">{{!-- <p>
-                </p> --}}{{!-- <ul>
-                    <h5>Subsea &amp; Geotechnical Projects</h5>
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Subsea &amp; Geotechnical Projects</h4>        
+                <ul class="mbr-text mbr-fonts-style display-7">
                     <li>Subsea production systems.</li>
                     <li>SubseaUmbilical Riser and Flow line (SURF/URL/UFL).</li>
-                    <li>Subsea Manifolds Jumpers.</li><li>Foundation Flow Assurance Studies</li>
-                </ul> --}}
-                <h5><br></h5><h5>Project Management &amp; Construction Supervision</h5>
-                
-                <p>We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work.
-
-We can work either as an integral part of the client’s project team providing specialist package services, or we can offer a complete construction management service covering all aspects of the project management</p>
-                <br>
-                <h5><strong>&nbsp;Solutions And Systems</strong></h5>
-                <ul>
-                    <li>Liquefaction &amp; Re-gasification</li><li>Implementation of software solutions</li><li>Water/gas &amp; oil separation plant solutions</li></ul><h5><strong><br></strong></h5><h5><strong>Operations Related Services</strong></h5>
-                <ul>
-                    <li>Technical operation of pipelines</li><li>Manage &amp; execute the installation of welded process pipe and fittings onsite</li><li>Process pipe installation: which can include the installation of associated mechanical equipment such as valves, pumps and pressure vessels</li><li>Construction, engineering and management</li><li>Operations &amp; Maintenance of turbo machinery (Turbo generators &amp; compressors) and gas turbines</li><li>Maintenance and Installation of heat exchange packages</li><li>RDV services</li><li>Brownfield maintenance (FPSO platforms)</li><li>Brownfield upgrade and retrofits</li><li>Safety and risk management</li><li>Expediting</li><li>Equipment testing &amp; start-up</li><li>Operations support</li>
+                    <li>Subsea Manifolds Jumpers.</li>
+                    <li>Foundation Flow Assurance Studies</li>
                 </ul>
+                    </div>
+                </div>
             </div>
-            
-             <div class="mbr-text counter-container col-12 col-md-4 mbr-fonts-style display-7"><p>
-                </p><ul>
-                    <h5>Onshore/Offshore Projects (Topside Facilities)</h5><h5><strong>The services we offer include</strong><br></h5>
-                    <li>Conceptual/Feasibility Studies</li><li>FEED and Detailed Engineering</li><li>Offshore Structure Installation Desgin</li><li>FPSO Platform Assessment</li><li>Process Facilities &amp; Skid Design</li><li>Technical Documentation for Oil &amp; Gas facilities, pipeline Refineries, Plants and Petrochemical Industries.</li></ul><p><br></p><h5><strong>Process Packages</strong><br></h5> <li>Engineering &amp; Technical Services</li><li>Electrical Instrumentation, telecom &amp; Control services</li><li>Transportation &amp; Storage</li>
-                <p><br></p><h5><strong>Overview</strong></h5><p>Our engineering teams have successfully delivered highly complex engineering projects in remote and challenging locations across Nigeria. Barbadox Limited capabilities cover comprehensive services, including feasibility studies, FEEDs, DED and EPC projects for Greenfield facilities and revamps. Our services have been engaged across a variety of onshore, offshore (shallow &amp; deep water) and subsea projects.</p><p>Our team of engineers have an average of 6 years field experience providing independent, comprehensive engineering solutions beginning at the early concept phase and extending through final commissioning in the following disciplines and specialty areas: process; technical safety; instrumentation and controls, electrical; civil/structural; mechanical and piping.</p><p><strong>Conceptual Engineering</strong></p><p>Our team focuses on functional requirements, systematic engineering and decision quality process during feasibility study by studying all project stakeholder perspectives and reviewing economic return.</p><p><strong>Front End Engineering Design (FEED)</strong></p><p>Our FEED solutions provide certainty of delivery and a high level of reliability. Our cost estimates are based on legacy and market data from our construction and installation experience as well as from procurement and vendor network. Our designs reflect proven construction and installation practices to ensure reliable, efficient, quality project delivery, lower costs, and faster FEEDs.</p><p><strong>Detail Design</strong></p><p>Our approach is carrying out modeling and analysis required for any installation methodology which have provided us some level of experience &amp; knowledge of constructability and best practices across multiple-disciplined design teams.&nbsp;</p><ul>
-                 </ul>
-            </div>
-            
-            <!--<div class="mbr-text counter-container col-12 col-md-3 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".mbr-text" data-multiline mbr-article>
-                <h5>Project Management &amp; Construction Supervision</h5>
-                
-                <p>We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work.
 
-We can work either as an integral part of the client’s project team providing specialist package services, or we can offer a complete construction management service covering all aspects of the project management</p>
-                
-                
-            </div> -->
-        </div>   
-                    
+            <div class="card p-3 col-12 col-md-6 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Onshore/Offshore Projects (Topside Facilities)</h4>
+                        <ul class="mbr-text mbr-fonts-style display-7">
+                            <li>Conceptual/Feasibility Studies</li>
+                            <li>FEED and Detailed Engineering</li>
+                            <li>Offshore Structure Installation Design</li>
+                            <li>FPSO Platform Assessment</li>
+                            <li>Process Facilities &amp; Skid Design</li>
+                            <li>Technical Documentation for Oil &amp; Gas facilities, pipeline Refineries, Plants and Petrochemical Industries.</li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Project Management &amp; Construction Supervision</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">We provide you with professional project management and construction supervision, specifically tailored to safeguard the successful completion of your project. Our highly experienced personnel can effectively control and supervise every aspect of your construction work. We can work either as an integral part of the client’s project team providing specialist package services, or we can offer a complete construction management service covering all aspects of the project management</p>
+                    <br>
+                    <br>
+                    </div>
+                </div>
+            </div>
+
+            
+        </div>
     </div>
+</section>
+
+<section class="features4 cid-qXXoxkQP4N" id="features4-5d">
+    
+         
+
+    
+    <div class="container">
+        <div class="media-container-row">
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Process Packages</h4>        
+                <ul class="mbr-text mbr-fonts-style display-7">
+                    <li>Engineering &amp; Technical Services</li>
+                    <li>Electrical Instrumentation, telecom &amp; Control services</li>
+                    <li>Transportation &amp; Storage
+                </li></ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Conceptual Engineering</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            Our team focuses on functional requirements, systematic engineering and decision quality process during feasibility study by studying all project stakeholder perspectives and reviewing economic return.
+
+                        </p>
+                            
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Front End Engineering Design (FEED)</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Our FEED solutions provide certainty of delivery and a high level of reliability. Our cost estimates are based on legacy and market data from our construction and installation experience as well as from procurement and vendor network. Our designs reflect proven construction and installation practices to ensure reliable, efficient, quality project delivery, lower costs, and faster FEEDs.</p>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+            </div>
+
+            
+        </div>
+    </div>
+</section>
+
+<section class="features4 cid-qXXqscCDtA" id="features4-5e">
+    
+         
+
+    
+    <div class="container">
+        <div class="media-container-row">
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Solutions And Systems</h4>        
+                <ul class="mbr-text mbr-fonts-style display-7">
+                    <li>Liquefaction &amp; Re-gasification</li>
+                    <li>Implementation of software solutions</li>
+                    <li>Water/gas &amp; oil separation plant solutions</li>
+                </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Detail Design</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            Our approach, is carrying out modeling and analysis required for any installation methodology which has provided us some level of experience &amp; knowledge of constructability and best practices across multiple-disciplined design teams. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper media-container-row">
+                    <div class="card-box">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Operations Related Services</h4>
+                        <ul class="mbr-text mbr-fonts-style display-7">
+                            <li>Technical operation of pipelines</li>
+                            <li>Manage &amp; execute the installation of welded process pipe and fittings onsite</li>
+                            <li>Process pipe installation: which can include the installation of associated mechanical equipment such as valves, pumps and pressure vessels</li>
+                            <li>Construction, engineering and management</li>
+                            <li>Operations &amp; Maintenance of turbo machinery (Turbo generators &amp; compressors) and gas turbines</li>
+                            <li>Maintenance and Installation of heat exchange packages</li>
+                            <li>RDV services</li>
+                            <li>Brownfield maintenance (FPSO platforms)</li>
+                            <li>Brownfield upgrade and retrofits</li>
+                            <li>Safety and risk management</li>
+                            <li>Expediting</li>
+                            <li>Equipment testing &amp; start-up</li>
+                            <li>Operations support</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
 
 {{> footer}}
