--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,34 +1,33 @@
-<section class="cid-qUjcJgeem6 mbr-reveal" id="footer1-9">
+<section class="cid-qXYOxaa0oe" id="footer2-5n">
 
-        
+    
+
+    
+
     <div class="container">
-        <div class="media-container-row content text-white">
-            <div class="col-12 col-md-3">
-                <div class="media-wrap">
-                    <a href="/">
-                        <img src="/assets/images/barbadox-192x108.jpg" alt="Mobirise" title="">
-                    </a>
-                </div>
-            </div>
+        <div class="media-container-row content mbr-white">
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Address
-                </h5>
-                <p class="mbr-text">Plot 5, Wole Ariyo street, Lekki phase 1, Lagos.</p>
-            </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Contacts
-                </h5>
                 <p class="mbr-text">
-                    Email: info@barbadoxltd.com
-                    <br>Phone: +234-(0)-803-932-3046<br></p>
+                    <strong>Address</strong>
+                    <br>
+                    <br>Plot 5, Wole Ariyo street, Lekki phase 1, Lagos.<br>
+                    <br>
+                    <br><strong>Contacts</strong>
+                    <br>
+                    <br>Email: info@barbadoxltd.com
+                    <br>Phone: +234 (0) 803 &nbsp;932 3046<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Links
-                </h5>
-                <p class="mbr-text"><a href="/procurement">Services</a>&nbsp;<br><a href="/about">About&nbsp;</a><br><a href="/submitrfqs">Submit RFQs</a></p>
+                <p class="mbr-text">
+                    <strong>Links</strong>
+                    <br>
+                    <br><a href="/procurement">Services</a><br><a href="/about">About&nbsp;</a><br><a href="/submitrfqs">Submit RFQs</a><br>
+                    <br><strong>Info</strong>&nbsp;<br>
+                    <br>For more information, please contact us on <a href="mailto:info@barbadoxltd.com">info@barbadoxltd.com</a> or go to our <a href="/contact">contact us</a> page.
+                </p>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:EjdwaGFzZSAxLCA1IFdvbGUgQXJpeW8gU3QsIExla2tpIFBoYXNlIEksIExhZ29zLCBOaWdlcmlhIiMaIQoWChQKEgnTqnu5-PQ7EBEVyqbmUqGMtxIHcGhhc2UgMQ" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
@@ -40,42 +39,11 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright {{curdate}} Barbadox Ltd. - All Rights Reserved
+                        © Copyright {{ curdate }} Barbadox Ltd. - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <div class="social-list align-right">
-                        <div class="soc-item">
-                            <a href="/" target="_blank">
-                                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="/" target="_blank">
-                                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="/" target="_blank">
-                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="/" target="_blank">
-                                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="/" target="_blank">
-                                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="/" target="_blank">
-                                <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
