--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,4 @@
-
-  <section class="menu cid-qUiLs8t9CL" once="menu" id="menu2-0">
+<section class="menu cid-qUiLs8t9CL" once="menu" id="menu2-0">
 
     
 
@@ -15,7 +14,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="/assets/images/barbadox-122x68.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -24,15 +23,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="/">Home</a>
+                    <a class="nav-link link text-black display-4" href="/index">Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="/about" aria-expanded="false">About</a>
     
                 
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="/procurement" data-toggle="dropdown-submenu" aria-expanded="true">Services</a>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="/services#content4-1v" data-toggle="dropdown-submenu" aria-expanded="true">Services</a>
                     
                 
                 <div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="/procurement" aria-expanded="false">Procurement<br></a><a class="dropdown-item text-black display-4" href="/engineering" aria-expanded="false">Engineering</a><a class="dropdown-item text-black display-4" href="/consulting" aria-expanded="false">Strategic Consulting</a><a class="text-black dropdown-item display-4" href="/installation" aria-expanded="false">Installation</a><a class="text-black dropdown-item display-4" href="/construction" aria-expanded="false">Construction</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="/industries" data-toggle="dropdown-submenu" aria-expanded="false">Industries<br></a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="/industries#content11-3y">Oil &amp; Gas</a><a class="text-black dropdown-item display-4" href="/industries#content11-3z" aria-expanded="false">Food &amp; Beverages</a><a class="text-black dropdown-item display-4" href="/industries#content11-40" aria-expanded="false">Power Utility Infrastructure</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="/careers">Careers</a></li>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="/oil-gas" data-toggle="dropdown-submenu" aria-expanded="false">Industries<br></a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="/oil-gas">Oil &amp; Gas</a><a class="text-black dropdown-item display-4" href="/food-beverages" aria-expanded="false">Food &amp; Beverages</a><a class="text-black dropdown-item display-4" href="/power" aria-expanded="false">Power Utility Infrastructure</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="/careers">Careers</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="/contact" aria-expanded="false">
                         Contact Us<br>
