--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -15,7 +15,7 @@
                     <br><strong>Contacts</strong>
                     <br>
                     <br>Email: info@barbadoxltd.com
-                    <br>Phone: +234 (0) 803 &nbsp;932 3046<br></p>
+                    <br>Phone: +234 (0) 803 932 3046<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
