Edit /installation and /construction routes

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,8 +2,7 @@
 
 
 <section class="features14 cid-qUjflfrooa" id="features14-d">
-
-    
+        
     <div class="container align-center">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">
             About Us</h2>
@@ -75,11 +74,11 @@
                     </div>
                 </div>
             </div>
-            <div class="media-container-row image-row">
-                <div class="mbr-figure" style="width: 33%;">
-                    <img src="/assets/images/mbr-732x533.jpg" alt="Installment" title="">
+           <!-- <div class="media-container-row image-row">
+                <div class="mbr-figure" mbr-style="{'width': mediaSize + '%'}">
+                    <img src="assets/images/mbr-732x533.jpg" alt="Mobirise" title>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
@@ -90,7 +89,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="title col-12 col-md-8">
+            <div class="title col-12 col-md-12">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Aim &amp; Objectives</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Our aim is to achieve the clients' goal in record time and at the right quality, while creating a conducive and safe environment for sustainability and optimum performance.
@@ -188,7 +187,6 @@
         </div>
     </div>
 </section>
-
 
 
 {{> footer}}
