--- a/views/construction.hbs
+++ b/views/construction.hbs
@@ -20,7 +20,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 50%;">
-                    <img src="/assets/images/construction-site-952x536.png" alt="Constructtion Site" title="">
+                    <img src="/assets/images/offshore-952x462.png" alt="Construction Site" title="">
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-5">Our services span across the following;</h2>
