--- a/views/installation.hbs
+++ b/views/installation.hbs
@@ -21,7 +21,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 50%;">
-                     <img src="/assets/images/installment.jpeg" alt="installment" title="">
+                     <img src="/assets/images/01-pipeline-installation-08-applying-field-joint-coating-952x714.jpg" alt="installment" title="">
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-5">We have competence to handle installation of the following;</h2>
