--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,27 +1,24 @@
-<section class="cid-qXYOxaa0oe" id="footer2-5n">
-
-    
-
-    
-
+<section class="cid-qXYOxaa0oe mbr-reveal" id="footer2-5n">
+        
     <div class="container">
         <div class="media-container-row content mbr-white">
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Address</strong>
                     <br>
-                    <br>Plot 5, Wole Ariyo street, Lekki phase 1, Lagos.<br>
+                    <br><span class="mbri-pin mbr-iconfont" style="color: rgb(204, 41, 82);"></span>&nbsp; Plot 5, Wole Ariyo street, Lekki phase 1, Lagos.<br>
                     <br>
                     <br><strong>Contacts</strong>
                     <br>
-                    <br>Email: info@barbadoxltd.com
-                    <br>Phone: +234 (0) 803 932 3046<br></p>
+                    <br><span class="mbr-iconfont mbr-iconfont-social mbri-letter"></span>&nbsp;<a href="mailto:info@barbadoxltd.com" class="text-white"> info@barbadoxltd.com
+</a>                    <br><span class="mbr-iconfont mbr-iconfont-social mbri-mobile"></span>&nbsp; <a href="tel:+234 (0) 803 932 3046" class="text-white">+234 (0) 803 932 3046</a><br>
+            <span class="mbr-iconfont mbr-iconfont-social mbri-globe-2"></span>&nbsp;&nbsp;<a href="http://www.barbadoxltd.com" class="text-white">www.barbadoxltd.com</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Links</strong>
                     <br>
-                    <br><a href="/procurement">Services</a><br><a href="/about">About&nbsp;</a><br><a href="/submitrfqs">Submit RFQs</a><br>
+                    <br><a href="/procurement" class="text-white">Services</a><br><a href="/about" class="text-white">About&nbsp;</a><br><a href="/submitrfqs" class="text-white">Submit RFQs</a><br>
                     <br><strong>Info</strong>&nbsp;<br>
                     <br>For more information, please contact us on <a href="mailto:info@barbadoxltd.com">info@barbadoxltd.com</a> or go to our <a href="/contact">contact us</a> page.
                 </p>
@@ -39,7 +36,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright {{ curdate }} Barbadox Ltd. - All Rights Reserved
+                        © Copyright 2018 Barbadox Ltd. - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -49,3 +46,4 @@
         </div>
     </div>
 </section>
+
