--- a/views/food-beverages.hbs
+++ b/views/food-beverages.hbs
@@ -1,20 +1,21 @@
 {{> navbar}}
 
-  <section class="mbr-section content4 cid-qXWS30xp6X" id="content4-4r">
+ <section class="mbr-section content4 cid-qXWS30xp6X" id="content4-4r">
 
     
 
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-2">{{title}}</h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">
+                    {{ title }}
+                </h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">We supply high-quality process instruments for food and beverage industries</h3>
                 
             </div>
         </div>
     </div>
 </section>
-
 
 <section class="mbr-section article content11 cid-qXWUg3gxAj" id="content11-52">
      
@@ -24,9 +25,7 @@
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 
                 <h3>Hygienic standards and safety&nbsp;<br></h3>
-                <p>
-                    Barbadox is the sole representative of WIKA Group and products in Nigeria. Measuring instruments from WIKA are manufactured in conformity with international standards. They meet the stringent requirements of, e.g.:
-                </p>
+                <p>Barbadox in partnership with world recognized OEMs provide support and quality products in Nigeria. Measuring instruments are manufactured in conformity with international standards. They meet the stringent requirements such as;</p>
                 
                 <ul>
                     <li>FDA (Food and Drug Administration)</li>
@@ -34,21 +33,19 @@
                     <li>3-A Sanitary Standards, Inc.</li>
                     <li>ATEX (directive 94/9/EC)</li>
                 </ul>
-                <p>
-                    For the proof of conformity within the scope of a HACCP concept, WIKA have an extensive programme ready-certified. For the ongoing testing of the instruments in the context of quality management, a wide range of calibration equipment and calibration services are available.
-                </p>
+                <p>For the ongoing testing of the instruments in the context of quality management, a wide range of calibration equipment and calibration services are available.</p>
                 
                 <h5><strong>Process connections&nbsp;</strong></h5>
-                <p><span style="color: inherit; font-family: inherit;">Barbadox through WIKA supplies a wide range of measuring instruments with manufacturer-specific process connections, which are usual in the industry like, for example, milk thread connection DIN 11851, clamp connections to DIN 32676, clamp ISO 2852 and ASME BPE, aseptic connections to DIN 11864, NEUMO®, VARIVENT®, for sterile or aseptic applications.</span></p>
-                <p><strong>EPC</strong><br></p>
-                <p>Barbadox through WIKA has worked with licensing and EPC companies for more than 30 years on major projects all over the world. We partner with you from the planning stages through to completion, and we provide post-project support. In addition to supplying high-quality process measurement instruments for temperature, pressure, level and flow applications, we can also work with you to develop solutions that meet your exact requirements.</p>
-                <p>We also offers on-site expertise and technical support services to help ensure the success of your project. For more information, contact us on <a href="mailto:info@barbadoxltd.com">info@barbadoxltd.com</a></p>
+                <p><span style="color: inherit; font-family: inherit;">Barbadox through renowned OEMs supplies a wide range of measuring instruments with manufacturer-specific process connections, which are usual in the industry like, for example, milk thread connection DIN 11851, clamp connections to DIN 32676, clamp ISO 2852 and ASME BPE, aseptic connections to DIN 11864, NEUMO®, VARIVENT®, for sterile or aseptic applications.</span></p><p><span style="color: inherit; font-family: inherit;"><br></span><strong>EPC</strong><br></p>
+                <p><span style="font-size: 1rem;">Barbadox through registered partners has worked with licensing and EPC companies for more than 3 years on major projects all over the world. We partner with you from the planning stages through to completion, and we provide post-project support. In addition to supplying high-quality process measurement instruments for temperature, pressure, level and flow applications, we can also work with you to develop solutions that meet your exact requirements.</span></p><p><span style="font-size: 1rem;">We also offers on-site expertise and technical support services to help ensure the success of your project. For more information, contact us on </span><a href="mailto:info@barbadoxltd.com" style="font-size: 1rem; background-color: rgb(255, 255, 255);">info@barbadoxltd.com</a><br></p>
+                
                 <p><span style="font-size: 20px;"><strong>Products</strong></span></p>
-                <p>Barbadox through WIKA has worked with licensing and EPC companies for more than 30 years on major projects all over the world. We partner with you from the planning stages through to completion, and we provide post-project support. In addition to supplying high-quality process measurement instruments for temperature, pressure, level and flow applications, we can also work with you to develop solutions that meet your exact requirements.</p>
+                <p>Barbadox through our various partners has provided us some level of trust on quality products and assurance. We deliver as fast as possible knowing that time is of great essence to every business and projects. EPCI companies that we have engaged us over the years have positive testimony of customer satisfaction, as we can also work with you to develop solutions that meet your needs.</p>
             </div>
         </div>
     </div>
 </section>
+
 
 
 <section class="carousel slide cid-qXWS3fGM5l" data-interval="false" id="slider2-4u">
